SERVER-60031 Declare RadixStore iterators [in]equality operators const